--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,7 @@ main {
         letter-spacing: 5px;
         font-weight: $weight;
         font-size: 15px;
+        display: flex;
     }
     p{
         padding: 1rem;
@@ -90,3 +91,67 @@ button:hover {
 
 
 
+.spinner {
+    --size: 30px;
+    --clr: #111;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    display: none;
+   }
+   
+   .spinner::after,.spinner::before {
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    width: var(--size);
+    height: var(--size);
+    top: 50%;
+    animation: up 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
+    left: 50%;
+    background: $Neon-Green;
+   }
+   
+   .spinner::after {
+    background: $Light-Cyan;
+    top: calc(50% - var(--size));
+    left: calc(50% - var(--size));
+    animation: down 2.4s cubic-bezier(0, 0, 0.24, 1.21) infinite;
+   }
+   
+   @keyframes down {
+    0%, 100% {
+     transform: none;
+    }
+   
+    25% {
+     transform: translateX(100%);
+    }
+   
+    50% {
+     transform: translateX(100%) translateY(100%);
+    }
+   
+    75% {
+     transform: translateY(100%);
+    }
+   }
+   
+   @keyframes up {
+    0%, 100% {
+     transform: none;
+    }
+   
+    25% {
+     transform: translateX(-100%);
+    }
+   
+    50% {
+     transform: translateX(-100%) translateY(-100%);
+    }
+   
+    75% {
+     transform: translateY(-100%);
+    }
+   }
+   
